# scraping-job

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  api.py  dashboard.py  main.py  pyproject.toml  requirements-dev.txt  requirements-render-places.txt  requirements-render.txt  requirements.txt
backend/: alembic.ini  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 001_initial_schema.py
backend/app/api/: deps.py
backend/app/api/routes/: leads.py  scraping.py
backend/app/core/: config.py  db.py
backend/app/services/: campaign.py  places_producer.py  processor.py  producer.py  scraper.py  strategies.py  utils.py
config/: settings.py
scripts/: check_db_connection.py
src/: campaign.py  models.py  processor.py  queue_manager.py  scraper.py  strategies.py  utils.py
tests/: conftest.py  test_campaign.py  test_crud.py  test_models.py  test_processor.py  test_queue_manager.py  test_strategies.py
